--- a/404.md
+++ b/404.md
@@ -1,3 +1,4 @@
-#Erreur 404
+# Erreur 404
+## Vérifiez que vous tentez d'accéder à la bonne page !
 
 Cette page est introuvable, elle n'existe pas ou a été supprimé.
