--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
-# Erreur 404
-## Vérifiez que vous tentez d'accéder à la bonne page !
+# Vous êtez Azeermmmeeennt perdu !
+## Erreur 404 !
 
 Cette page est introuvable, elle n'existe pas ou a été supprimé.
